# OpenJKDF2

./: .gitignore  .gitmodules  BUILDING.md  BUILDING_SWITCH.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_sdl_test.txt  CMakeLists_switch.txt  CMakeLists_switch_minimal.txt  CMakeLists_switch_simple.txt  CONTRIBUTING.md  HOOKS.md  LICENSE.md  Makefile  Makefile.emcc  Makefile.linux  Makefile.linux64  Makefile.macos  Makefile.win64  README.md  README.md.template  README_switch_minimal.md  all_o_files.txt  analyze.py  build.sh  build_android.sh  build_dreamcast.sh  build_linux64.sh  build_macos_distpkg.sh  build_run_android.sh  build_run_df2.sh  build_run_dreamcast.sh  build_run_openjkdf2_macos.sh  build_run_openjkdf2_wasm.sh  build_run_openmots_macos.sh  build_run_twl.sh  build_run_winxp32.sh  build_sdl_test.sh  build_switch.sh  build_switch_sdl_test.sh  (+49 more)
.github/: build_macos.sh  build_win64.sh
.github/workflows/: macos.yml  ubuntu.yml  win64.yml
byacc/: MANIFEST  Makefile  lalr.c  lr0.c  main.c  reader.c  skeleton.c  symtab.c
byacc/orig/: part04.txt  part05.txt  part2.sh
cmake_modules/: FindGameNetworkingSockets.cmake  FindOpenAL.cmake  GameNetworkingSockets_v1.4.1.patch  SwitchTools.cmake  build_freeglut.cmake  build_glew.cmake  build_gns.cmake  build_host_zlib.cmake  build_libpng.cmake  build_openal.cmake  build_physfs.cmake  build_protobuf.cmake  build_protoc.cmake  build_sdl.cmake  build_sdl_mixer.cmake  build_zlib.cmake  config_platform_deps.cmake  mingw_toolchain.cmake  misc_stdcpp_fs_fix.cmake  openjkdf2_ds_arm9.ld  openjkdf2_dsi_arm9.mem  plat_android_arm64.cmake  plat_dreamcast.cmake  plat_feat_full_sdl2.cmake  plat_hooks.cmake  plat_linux_32.cmake  plat_linux_64.cmake  plat_macos.cmake  plat_macos_x86_64.cmake  plat_mingw_x86_32.cmake  plat_mingw_x86_64.cmake  plat_msvc.cmake  plat_switch.cmake  plat_twl.cmake  plat_wasm.cmake  postcompile_macos.cmake  precompile_globals.cmake  target_android_all.cmake  target_linux_all.cmake  target_macos_all.cmake  (+15 more)
df2_reimpl/: JK-hook.ips  Makefile  Makefile.emcc  Makefile.linux  Makefile.linux64  Makefile.macos  Makefile.win64  README.md  README.md.template  analyze.py  build.sh  cog.c  cog.h  common.mk  hook.c  hook.h  ida_copypaste_funclist.txt  ida_copypaste_funclist_nostdlib.txt  jk.c  jk.h  jkl.c  jkl.h  main.c  symbols.syms
df2_reimpl/byacc/: closure.c  defs.h  error.c  flex.html  lalr.c  lr0.c  main.c  manpage  mkpar.c  output.c  reader.c  skeleton.c  verbose.c
df2_reimpl/flex/: MANIFEST  MISC  Makefile  PACKNOTES  README  ccl.c  dfa.c  ecs.c  flex.1  flexdef.h  gen.c  lex.yy.c  main.c  misc.c  nfa.c  parse.y  scan.c  scan.l  sym.c  tblcmp.c  yylex.c
df2_reimpl/src/: cog.l  cog.y  flex.skel  globals.c.cog  globals.h.cog  hook.c  hook.h  jk.c  jk.h  jkl.c  jkl.h  lex.yy.c  main.c  rdVector.c  sithCog.c  sithCogParse.h  stdConffile.c  stdFnames.c  stdFnames.h  stdGob.c  stdGob.h  stdHashTable.c  stdHashTable.h  stdMath.h  stdMathTables.h  stdPlatform.c  stdPlatform.h  types.h  unusedWontImpl.c  y.tab.c
dlls/: advapi32.cpp  advapi32.h  comctl32.cpp  comctl32.h  ddraw.cpp  ddraw.h  gdi32.cpp  gdi32.h  jk.cpp  jk.h  kernel32.cpp  kernel32.h  msvcrt.cpp  msvcrt.h  nmm.cpp  nmm.h  ole32.cpp  ole32.h  smackw32.cpp  smackw32.h  user32.cpp  user32.h  winutils.cpp  winutils.h
dlls/ddraw/: IDirect3D3.cpp  IDirect3D3.h  IDirect3DDevice.cpp  IDirect3DDevice.h  IDirect3DExecuteBuffer.cpp  IDirect3DExecuteBuffer.h  IDirect3DTexture.cpp  IDirect3DTexture.h  IDirect3DViewport.h  IDirectDraw4.h  IDirectDrawPalette.h  IDirectDrawSurface3.h  ddraw.cpp  ddraw.h
dlls/dinput/: IDirectInputA.h  IDirectInputDeviceA.cpp  IDirectInputDeviceA.h  dinput.h
dlls/dplay/: IDirectPlay3.h  IDirectPlayLobby3.h  dplay.h
dlls/dsound/: IDirectSound.h  IDirectSoundBuffer.cpp  IDirectSoundBuffer.h  dsound.h
enc_temp_folder/1d891280084e7f91217cd295e46c/: jkSaber.c
enc_temp_folder/2488e7358fc33fb335bf133829f5347/: sithWeapon.c
enc_temp_folder/d1b149aead8e3f71d09a2c51fd56df/: rdSprite.c
enc_temp_folder/d4bd89facf881421c367f3b1e613777/: jkPlayer.c
flex/: dfa.c  flex.skel  flexdef.h  gen.c  parse.y  scan.c  scan.l  tblcmp.c
flex/MISC/: MSDOS.notes  Makefile.VMS  Turbo-C.notes
lib/: ogg_fix.patch  physfs_macos.patch
loaders/: exe.cpp  exe.h
packaging/android-project/: generate_icons.sh  gradle.properties
packaging/flatpak/: build_linux64_flatpak.sh  build_linux_flatpak.sh  copy_icons.sh  generate_icons.sh  org.openjkdf2.OpenJKDF2.desktop  org.openjkdf2.OpenJKDF2.metainfo.xml  org.openjkdf2.OpenJKDF2.template.yml
packaging/linux/: .gitignore  PKGBUILD  openjkdf2.desktop  openjkdf2.sh  openjkdf2_import.sh
packaging/wasm/: index.html
packaging/win32/: CMakeLists.txt  openjkdf2-32.exe.manifest  openjkdf2.manifest.in  openjkdf2.rc
render/: shader_utils.cpp  shader_utils.h
resource/shaders/: bloom_f.glsl  blur_f.glsl  decal_f.glsl  decal_insert_f.glsl  decal_insert_v.glsl  default_f.glsl  default_v.glsl  depth_f.glsl  depth_v.glsl  light_f.glsl  menu_f.glsl  menu_v.glsl  occ_f.glsl  omb_f.glsl  omb_v.glsl  postfx_f.glsl  ssao_f.glsl  ssao_mix_f.glsl  ssao_mix_v.glsl  ssao_v.glsl  stencil_f.glsl  texfbo_f.glsl  ui_f.glsl  world_f.glsl  world_v.glsl
resource/ui/: openjkdf2.uni  openjkdf2_i8n.uni
scripts/: helper_CopyMinGWDLLs.sh  helper_CopyMinGWDLLs_x86_32.sh  increment_version.py  increment_version_commits.py
scripts/assets/: bm_to_bm.py  fixup_dw_jkl.py  gob-extract.py  mat-to-png.py  mat_to_mat.py
scripts/ghidra/: importDataSymbols.py  importSymbols.py
scripts/ida/: bulkrename.py  bulkrenameenums.py
src/: SDL2_helper.h  engine_config.h  fixed.h  globals.c.cog  globals.h.cog  hook.h  jk.c  jk.h  main.c  main_globals.c  main_switch_simple.c  stdPlatform.c  stdPlatform.h  types.h  types_enums.h  types_win_enums.h  unusedWontImpl.c  version.c  version.h  wprintf.c  wprintf.h
src/AI/: sithAI.c  sithAI.h  sithAIAwareness.c  sithAIAwareness.h  sithAIClass.c  sithAIClass.h  sithAICmd.c  sithAICmd.h
src/Cog/: cog.l  cog.y  flex.skel  jkCog.c  jkCog.h  lex.yy.c  sithCog.c  y.tab.c  (+33 more)
tests/: test_invariant_stdHttp.c
(+866 files in other folders)
